# Merit-catchment-extract

./: .gitignore  Extract_Merit  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTORING_PLAN.md  config.example.yaml  extract_merit_catchment.py  pyproject.toml  requirements.txt
examples/: README.md
merit_extractor/: __init__.py  gis_utils.py  io.py  topology.py  utils.py
