[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merit-watershed-extractor"
version = "2.2.0"
description = "A high-performance Python tool for automated watershed delineation from MERIT-Basins hydrological dataset"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MERIT Watershed Tool Contributors"}
]
keywords = [
    "hydrology",
    "watershed",
    "catchment",
    "MERIT-Basins",
    "GIS",
    "geospatial",
    "hydrological-modeling"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology"
]
requires-python = ">=3.7"
dependencies = [
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0"
]

[project.urls]
Homepage = "https://github.com/licm13/Merit-catchment-extract"
Repository = "https://github.com/licm13/Merit-catchment-extract"
Issues = "https://github.com/licm13/Merit-catchment-extract/issues"

[project.scripts]
extract-merit = "extract_merit_catchment:main"

[tool.setuptools]
py-modules = ["extract_merit_catchment"]

[tool.setuptools.packages.find]
where = ["."]
include = ["extract_merit_catchment*"]
